[package]
name = "tokio-oga"
version = "0.0.1-alpha.0"
authors = ["Luca BRUNO <luca.bruno@coreos.com>"]
edition = "2018"
publish = false

[dependencies]
log = "^0.4"
futures = "^0.3"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tokio = { version = "0.2", features = ["uds", "stream", "io-util", "rt-core", "sync", "macros", "time"] }