[package]
name = "tokio-oga"
version = "0.0.1-alpha.0"
authors = ["Luca BRUNO <luca.bruno@coreos.com>"]
edition = "2018"
publish = false

[dependencies]
futures = "^0.3"
libc = "^0.2"
log = "^0.4"
mio = "^0.6"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
thiserror = "^1.0"
tokio = { version = "0.2", features = ["io-driver", "io-util", "macros", "rt-core", "sync", "time"] }

[dev-dependencies]
env_logger = "^0.7"